# OptimLibSetupHub

./: .gitignore  README.md
ALTRO/: .gitignore  README.md  install_altro.sh  install_cmake.sh
CasADi/: .gitignore  README.md  install_casadi.sh  run_example.sh
CasADi/src/: CMakeLists.txt  main.cpp
IPOPT/: .gitignore  README.md  install_hsl.sh  install_ipopt.sh  run_example.sh
IPOPT/src/: CMakeLists.txt  MyNLP.cpp  MyNLP.hpp  main.cpp
OSQP/: .gitignore  README.md  install_osqp.sh  install_osqp_eigen.sh  run_eigen_example.sh  run_example.sh
OSQP/src/: CMakeLists.txt  main.cpp
OSQP/src_eigen/: CMakeLists.txt
acados/: .gitignore  README.md  install_acados.sh
ceres-solver/: .gitignore  README.md  install_ceres_solver.sh  run_example.sh
ceres-solver/src/: CMakeLists.txt
crocoddyl/: README.md  install_crocoddyl.sh  run_example.sh
crocoddyl/src/: CMakeLists.txt  main.cpp
hpipm/: .gitignore  README.md  install_hpipm.sh  install_hpipm_cpp.sh  run_cpp_example.sh  run_example.sh
hpipm/src/: CMakeLists.txt  main.c
hpipm/src_cpp/: CMakeLists.txt
qpOASES/: .gitignore  README.md  install_qpoases.sh  run_example.sh
qpOASES/src/: CMakeLists.txt
template/: README.md
template/src/: CMakeLists.txt
